<resources>

    <!--General-->
    <string name="app_name">Movie Check</string>
    <string name="sharedpreferences" translatable="false">sharedpreferences_moviecheck</string>
    <string name="sharedpreferences_loggeduser" translatable="false">sharedpreferences_loggeduser_moviecheck</string>
    <string name="sharedpreferences_hasreadtutorial" translatable="false">sharedpreferences_hasreadtutorial_moviecheck</string>
    <string name="themoviedbapi_baseurl" translatable="false">http://api.themoviedb.org/3/</string>
    <string name="imagetmdb_baseurl" translatable="false">http://image.tmdb.org/t/p/w500</string>
    <string name="themoviedbapi_key" translatable="false">b4537e21984eb259d2c2b093b7980570</string>
    <string name="youtube_credential" translatable="false">AIzaSyCLcunU7LR5CrNKPVnPixFYrmId5lF2KlE</string>
    <string name="youtube_image_url" translatable="false">https://img.youtube.com/vi/%1$s/0.jpg</string>
    <string name="general_nowplaying">Now Playing Movies</string>
    <string name="general_upcoming">Upcoming Movies</string>
    <string name="general_popular">Popular Movies</string>
    <string name="general_toprated">Top Rated Movies</string>
    <string name="general_more">more</string>
    <string name="general_date">MM-dd-yyyy</string>
    <string name="general_failedtoload">Ops! Failed to Load! :´( \n Touch to try again</string>
    <string name="general_anyfounded">Ops! Any founded! :´(</string>
    <string name="general_loading">Loading…</string>
    <string name="generic_opendrawer">Open Bar</string>
    <string name="generic_closedrawer">Close Bar</string>
    <string name="generic_movies">Movies</string>
    <string name="generic_ok">OK!</string>

    <!--HomeActivity-->
    <string name="homeactivity_search">Search</string>
    <string name="homeactivity_welcometitle">Welcome to Movie Check!</string>
    <string name="homeactivity_welcomedetail">Search for specific movies or actor, see photos and videos, learn about the cast and crew, and receive movie recommendations.\nDon\'t forget to login to be able to create a queue of movies to watch later and also rate movies you have already seen.</string>
    <string name="homeactivity_discovermoviestitle">It takes one second</string>
    <string name="homeactivity_discovermoviesdetails">Log in with your Google account to use the Discover! We promise that it\'s fast!</string>

    <!--NavigationView-->
    <string name="navigationview_signingoogle">Sign In with Google</string>

    <!--ListPopularMoviesActivity -->
    <string name="listpopularmoviesactivity_title">Popular Movies</string>

    <!--ListTopRatedMoviesActivity -->
    <string name="listtopratedmoviesactivity_title">Top Rated Movies</string>

    <!--ListUpcomingMoviesActivity -->
    <string name="listupcomingmoviesactivity_title">Upcoming Movies</string>

    <!--ListNowPlayingMoviesActivity -->
    <string name="nowplayingmoviesactivity_title">Now Playing Movies</string>

    <!--MovieProdileActivity-->
    <string name="movieprofileactivity_general">General</string>
    <string name="movieprofileactivity_castcrew">Cast &amp; Crew</string>
    <string name="movieprofileactivity_reviews">Reviews</string>
    <string name="movieprofileactivity_media">Media</string>

    <!--MovieDetailFragment-->
    <string name="moviedetailfragment_overview">Overview</string>
    <string name="moviedetailfragment_releasedate">Release Date:</string>
    <string name="moviedetailfragment_votecount">%1$d votes</string>
    <string name="moviedetailfragment_failedtoloadgenre">Ops! Failed to load genres!</string>
    <string name="moviedetailsfragment_removedfromwatched">Movie removed from your list of watched movies</string>
    <string name="moviedetailsfragment_addedaswatched">Movie added your list of watched movies!</string>
    <string name="moviedetailsfragment_addedtowatchlater">Movie added to your interest list!</string>
    <string name="moviedetailfragment_movieremovedwatchlater">Movie removed from your interest list</string>

    <!--CastCrewFragment-->
    <string name="castcrewfragment_cast">Cast</string>
    <string name="castcrewfragment_crew">Crew</string>
    <string name="castcrewfragment_anycastfounded">OPS! Any founded!</string>
    <string name="castcrewfragment_failedtoloadcast">OPS! Failed to Load!</string>

    <!--PersonProfileActivity-->
    <string name="personprofileactivity_general">General</string>
    <string name="personprofileactivity_works">Works</string>
    <string name="personprofileactivity_media">Media</string>

    <!--PersonDetailFragment-->
    <string name="persondetail_biography">Biography</string>
    <string name="persondetailfragment_placebirth">Place of Birth:</string>
    <string name="persondetailfragment_deathday">Deathday:</string>
    <string name="persondetailfragment_birthday">Birthday:</string>
    <string name="persondetailfragment_notfound">Ops! Person not found!</string>
    <string name="persondetailfragment_failedtoload">Ops! Failed to Load!</string>

    <!--PersonWorkFragment-->
    <string name="fragmentpersonwork_ascrew">As Crew</string>
    <string name="fragmentpersonwork_ascast">As Cast</string>

    <!--SearchActivity-->
    <string name="searchactivity_movies">Movies</string>
    <string name="searchactivity_celebrities">Celebrities</string>
    <string name="searchactivity_search">Search</string>
    <string name="searchactivity_hint">Movies and Celebrities…</string>

    <!--SearchPersonActivity-->
    <string name="searchpersonactivity_celebrities">Celebrities</string>

    <!--SearchMovieActivity-->
    <string name="searchmovieactivity_movies">Movies</string>

    <!--UserProfileActivity-->
    <string name="userprofileactivity_title">%1$s Profile</string>
    <string name="userprofileactivity_interest">To Watch</string>
    <string name="userprofileactivity_watched">Watched</string>
    <string name="userprofileactivity_general">General</string>

    <!--ListMovieWatchedFragment-->
    <string name="listmoviewatchedfragment_remove">Remove</string>
    <string name="listmoviewatchedfragment_movieremoved">%1$s removed from your list of watched movies</string>

    <!--ListMovieInterestFragment-->
    <string name="listmovieinterestfragment_remove">Remove</string>
    <string name="listmovieinterestfragment_movieremoved">%1$s removed from your interest list</string>

    <!--UserDetailFragment-->
    <string name="userdetailfragment_watchedgenres">Most Watched Genres</string>
    <string name="userdetailfragment_dontforget">Don\'t Forget To Watch!</string>

    <!--DiscoveryActivity-->
    <string name="discoveryactivity_title">Discovery</string>
    <string name="discoveryactivity_nextmovie">Next Movie</string>
    <string name="discoveryactivity_tryagain">Ops! Something bad has happened! Please, try again!</string>
    <string name="discoveryactivity_addedtowatchlater">Movie added to watch later!</string>
    <string name="discoveryactivity_movieremovedwatchlater">Movie removed from \'To Watch List\'</string>
    <string name="upcomingmovieswidget_title">Upcoming Movies</string>

</resources>
