<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_search"
            android:checked="true"
            android:icon="@drawable/search"
            android:title="@string/homeactivity_search"/>

        <item
            android:id="@+id/drawer_nowplaying"
            android:title="@string/general_nowplaying"/>

        <item
            android:id="@+id/drawer_upcoming"
            android:title="@string/general_upcoming"/>

        <item
            android:id="@+id/drawer_toprated"
            android:title="@string/general_toprated"/>

        <item
            android:id="@+id/drawer_popular"
            android:title="@string/general_popular"/>

    </group>
</menu>