<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/linearlayout_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageview_poster"
                android:layout_width="@dimen/poster_width"
                android:layout_height="@dimen/poster_height"
                android:adjustViewBounds="true"
                android:background="@drawable/scrim"
                android:transitionName="personPhoto"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        style="@style/TextH3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_margin="5dp"
                        android:text="@string/persondetailfragment_birthday" />

                    <TextView
                        android:id="@+id/textview_birthday"
                        style="@style/TextH3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="normal" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearlayout_deathday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        style="@style/TextH3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/persondetailfragment_deathday" />

                    <TextView
                        android:id="@+id/textview_deathday"
                        style="@style/TextH3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="normal" />

                </LinearLayout>

                <TextView
                    style="@style/TextH3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/persondetailfragment_placebirth" />

                <TextView
                    android:id="@+id/textview_placebirthday"
                    style="@style/TextH3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="normal" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textview_biographylabel"
            style="@style/TextH3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@+id/linearlayout_header"
            android:text="@string/persondetail_biography" />

        <TextView
            android:id="@+id/textview_biography"
            style="@style/TextNormal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textview_biographylabel"
            android:layout_margin="10dp" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone"/>

    </RelativeLayout>
</ScrollView>