<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toobar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                style="@style/TextH2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text="@string/searchactivity_movies" />

            <TextView
                android:id="@+id/textview_moremovies"
                style="@style/TextNormal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_weight="0.2"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/go_arrow"
                android:gravity="end|center_vertical"
                android:onClick="moreMovie"
                android:visibility="gone"
                android:text="@string/general_more" />

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.45"
            android:gravity="center">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_movie"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <include
                android:id="@+id/linearlayout_movie_anyfounded"
                layout="@layout/anyfounded" />

            <include
                android:id="@+id/linearlayout_movie_loadfailed"
                layout="@layout/failedtoload" />

            <ProgressBar
                android:id="@+id/progressbar_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:indeterminate="true"
                android:visibility="gone" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                style="@style/TextH2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text="@string/searchactivity_celebrities" />

            <TextView
                android:id="@+id/textview_moreperson"
                style="@style/TextNormal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_weight="0.2"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/go_arrow"
                android:gravity="end|center_vertical"
                android:onClick="morePerson"
                android:visibility="gone"
                android:text="@string/general_more" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.45"
            android:gravity="center">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_person"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <include
                android:id="@+id/linearlayout_person_anyfounded"
                layout="@layout/anyfounded" />

            <include
                android:id="@+id/linearlayout_person_loadfailed"
                layout="@layout/failedtoload" />

            <ProgressBar
                android:id="@+id/progressbar_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:indeterminate="true"
                android:visibility="gone" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>