<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageview_backdrop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/poster_height"
                android:adjustViewBounds="true"
                android:background="@drawable/scrim"
                android:scaleType="centerCrop"
                android:transitionName="movieBackdrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="-60dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageview_poster"
                    android:layout_width="@dimen/poster_width"
                    android:layout_height="@dimen/poster_height"
                    android:adjustViewBounds="true"
                    android:background="@drawable/scrim"
                    android:scaleType="fitXY"
                    android:transitionName="moviePoster" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RatingBar
                        android:id="@+id/ratingbar_userclassification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/RatingBarRed"
                        android:layout_gravity="end"
                        android:numStars="5"
                        android:visibility="invisible"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end">

                        <RatingBar
                            android:id="@+id/ratingbar_criticclassification"
                            android:theme="@style/RatingBarAccent"
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:isIndicator="true"
                            android:layout_gravity="end"
                            android:numStars="5" />


                        <TextView
                            android:id="@+id/textview_votecount"
                            style="@style/TextNormal"
                            android:layout_marginLeft="5dp"
                            android:layout_marginStart="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/moviedetailfragment_votecount" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="10dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/TextH3"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="@string/moviedetailfragment_releasedate" />

                            <TextView
                                android:id="@+id/textview_releasedate"
                                style="@style/TextH3"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="5dp"
                                android:layout_marginStart="5dp"
                                android:gravity="center_vertical"
                                android:textStyle="normal" />

                        </LinearLayout>

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="5dp">

                            <android.support.v7.widget.RecyclerView
                                android:id="@+id/recyclerview_genres"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <ProgressBar
                                android:id="@+id/progressbar_genre"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:indeterminate="true"
                                android:visibility="gone" />

                        </RelativeLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                style="@style/TextH3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/moviedetailfragment_overview" />

            <TextView
                android:id="@+id/textview_overview"
                style="@style/TextNormal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp" />

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_interest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:elevation="8dp"
        android:src="@drawable/towatch"
        android:visibility="gone"
        app:backgroundTint="@color/gray"
        app:borderWidth="0dp" />

</RelativeLayout>